--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 
         <header class="header2">
             <a href="#"> megamart </a>
-
             <div class="search">
                 <input placeholder=" Search essentials, groceries and more...">
             </div>
@@ -33,15 +32,15 @@
                     <a href="#"> Cart </a>
                 </li>
             </ul>
-            <!-- <ul>
-                <li>
-                    <a href="#"> Cart </a>
-
-                </li>
-            </ul> -->
         </header>
 
         <div class="dropdown">
+            <button class="dropbtn"> Groceries </button>
+            <button class="dropbtn"> Groceries </button>
+            <button class="dropbtn"> Groceries </button>
+            <button class="dropbtn"> Groceries </button>
+            <button class="dropbtn"> Groceries </button>
+            <button class="dropbtn"> Groceries </button>
             <button class="dropbtn"> Groceries </button>
             <div class="dropdown-content">
                 <a href="#">Link 1</a>
@@ -51,44 +50,47 @@
         </div>
 
         <div class="watch">
-            <p> Best Deal Online on smart watches
-                SMART WEARABLE.
-                UP to 80% OFF
-            </p>
+            <img class="mySlides" src="img_snowtops.jpg">
+            <img class="mySlides" src="img_lights.jpg">
+            <img class="mySlides" src="img_mountains.jpg">
+            <img class="mySlides" src="img_forest.jpg">
+            <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
+            <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         </div>
+
         <h1> smartphones </h1>
         <div class="smartphones">
-            <img src="telefon_resmi.jpg" alt="Telefon Resmi" class="card-img">
             <div class="card-content">
-                <h2 class="card-title">Marka: Apple</h2>
+                <img src="telefon_resmi.jpg" alt="Telefon Resmi" class="card-img">
+                <h2 class="card-title"> Apple </h2>
                 <p class="card-model">Model: iPhone 14</p>
                 <p class="card-price">Fiyat: $999</p>
             </div>
 
-            <img src="telefon_resmi.jpg" alt="Telefon Resmi" class="card-img">
             <div class="card-content">
-                <h2 class="card-title">Marka: Apple</h2>
+                <img src="telefon_resmi.jpg" alt="Telefon Resmi" class="card-img">
+                <h2 class="card-title"> Apple </h2>
                 <p class="card-model">Model: iPhone 14</p>
                 <p class="card-price">Fiyat: $999</p>
             </div>
 
-            <img src="telefon_resmi.jpg" alt="Telefon Resmi" class="card-img">
             <div class="card-content">
-                <h2 class="card-title">Marka: Apple</h2>
+                <img src="telefon_resmi.jpg" alt="Telefon Resmi" class="card-img">
+                <h2 class="card-title"> Apple </h2>
                 <p class="card-model">Model: iPhone 14</p>
                 <p class="card-price">Fiyat: $999</p>
             </div>
 
-            <img src="telefon_resmi.jpg" alt="Telefon Resmi" class="card-img">
             <div class="card-content">
-                <h2 class="card-title">Marka: Apple</h2>
+                <img src="telefon_resmi.jpg" alt="Telefon Resmi" class="card-img">
+                <h2 class="card-title"> Apple </h2>
                 <p class="card-model">Model: iPhone 14</p>
                 <p class="card-price">Fiyat: $999</p>
             </div>
 
-            <img src="telefon_resmi.jpg" alt="Telefon Resmi" class="card-img">
             <div class="card-content">
-                <h2 class="card-title">Marka: Apple</h2>
+                <img src="telefon_resmi.jpg" alt="Telefon Resmi" class="card-img">
+                <h2 class="card-title"> Apple </h2>
                 <p class="card-model">Model: iPhone 14</p>
                 <p class="card-price">Fiyat: $999</p>
             </div>
@@ -152,8 +154,9 @@
                 </div>
             </div>
         </div>
-        <h1> Daily Essentials </h1>
-        <div class="card-container">
+
+        <h1> Top Electronics Brands </h1>
+        <div class="TopElectronicsBrands">
             <div class="card">
                 <img src="iphone.jpg" alt="iPhone 14" class="card-img">
                 <div class="card-content">
@@ -178,8 +181,9 @@
                 </div>
             </div>
         </div>
-        <h1> Top Electronics Brands </h1>
-        <div class="card-container">
+
+        <h1> Daily Essentials </h1>
+        <div class="DailyEssentials">
             <div class="card">
                 <img src="apple.jpg" alt="Apple" class="card-img">
                 <div class="card-content">
@@ -228,10 +232,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
     </div>
 </body>
 
